--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,19 +1,6 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+<%- include("partials/header.ejs") %>
     
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
-    <link rel="stylesheet" href="styles/main.css">
-</head>
-<body>
-
-    <h1>Jokes!</h1>
-
-    
-        <div class="card width" >
+<div class="card width" >
             <div class="card-header">
               Quote
             </div>
@@ -24,15 +11,16 @@
                 <footer class="blockquote-footer">Someone famous in <cite title="Source Title">Source Title</cite></footer>
               </blockquote>
             </div>
-          </div>
-        <% } else { %>
+            <% } else { %>
           <h1>enter</h1>
         <% } %>
-
+          </div>
+        
+<div>
     <form action="/submit" method="POST">
         <input type="submit" value="Generate any joke">
       </form>
-     
+     </div>
   
 
   
